# Priority_KV

./: .env.example  .gitignore  AGENTS.md  ARUSH_ADD_FRIEND.md  CITATION.cff  CLUSTER_NOTES.md  COLLAB.md  CONTRIBUTING.md  FINAL_RUN_MANIFEST.yaml  FRIEND_AGENT_SETUP.md  LICENSE  NOTICE  README.md  RESULTS.md  SECURITY.md  YOUR_NEXT_STEPS.md  pyproject.toml  requirements.txt  submitting_jobs.md  working_with_jobs.md
collab_bridge/: __init__.py  __main__.py  agent_runner.py  config.py  memory.py  protocol.py  state_store.py  telegram_client.py  tick.py
configs/: d4_fp8_compare.yaml  d4_latency_m3.yaml  d4_latency_micro.yaml  external_bfcl_prajna_v1.yaml  gemma_reduced.yaml  linear_risk_fit.json  mg_lock240_quality.yaml  mg_peak_mem.yaml  p0_w5_s0_kf25_token_buried.yaml  p0_w5_s0_kf25_token_middle.yaml  p0_w5_s1_kf25_token_buried.yaml  p0_w5_s1_kf25_token_middle.yaml  p0_w5_s2_kf25_token_buried.yaml  p0_w5_s2_kf25_token_middle.yaml  p1_attn_baselines_s0_kf25.yaml  p1_attn_baselines_s1_kf25.yaml  p1_attn_baselines_s2_kf25.yaml  p1_h2o_16k_s0_kf25.yaml  p1_h2o_chunked_s0_kf25.yaml  p2_fi_stream_cold_16k.yaml  p3_llama31_attn_s0_kf05.yaml  p3_llama31_attn_s0_kf10.yaml  p3_llama31_attn_s0_kf25.yaml  p3_llama31_attn_s1_kf05.yaml  p3_llama31_attn_s1_kf25.yaml  p3_llama31_attn_s2_kf25.yaml  stress_dropkeep_16k.yaml  stress_dropkeep_sweep.yaml  stress_structured_25.yaml  stress_structured_25_buried.yaml  w1_byte_budget.json  w1_fp8.yaml  w1_fullkv.yaml  w2_pb_quality.yaml  w2_pb_quality_16k.yaml  w2b_pb_quality_16k.yaml  w2c_pb_quality_16k.yaml  w2c_pb_quality_8k.yaml  w2d_pb_quality_16k.yaml  w3_int4_assert.yaml  (+22 more)
docs/: APPLIED_SCIENCE_REVIEW_BRIEF.md  BLOG.md  BLOG_DRAFT.md  BRIDGE_DESIGN.md  D3_CLOSE.md  DATASET.md  DATASET_AUDIT.md  EVIDENCE.md  H200_QUEUE.md  H200_SETUP.md  HANDOFF.md  HANDOFF_W3_INT4.md  IMPLEMENTATION_PLAN.md  IR_STARTER.md  NEXT_CHAT_HANDOFF.md  PRAJNA_BFCL_HANDOFF.md  PRAJNA_CURSOR_PROMPT.md  PRIORITYKV_IMPLEMENTATION_PLAN.md  REPRODUCIBILITY.md  SERIAL_TO_P3.md  UPSTREAM_PR_PLAN.md  atlas_w4_structure_rows.jsonl  audit_w3.md  audit_w3_dual.md  collab_memory.md  decisions.md  failure_atlas.md  outreach_log.md
jobs/: README.md
paper/: ARXIV_SUBMISSION.md  BUILD.md  README.md  body.tex  body_conf.tex  external_workshop_paper.md  prioritykv.tex  prioritykv_arxiv.tex  prioritykv_arxiv_draft.md  prioritykv_conference.tex  prioritykv_manuscript.md
scopes/: PROJECT_SCOPE.md
scripts/: _env.sh  analyze_protected_fraction.py  atlas_collect.py  audit_bench.py  audit_retention.py  audit_tau_retention.py  bytes_report.py  check.sh  check_packed_cache.py  check_pages.py  cmp_fp8.py  cmp_gen.py  diag_cuda_toolkit.py  diag_nvidia_smi.py  dual_audit_w3.py  fetch_results.sh  generate_prioritybench.py  h200_bootstrap_pkworker.sh  h200_force_push_scratch_jobs.sh  install_cron.sh  int4_status.py  label_page_perturb.py  make_conference_body.py  make_external_figures.py  make_external_figures.py.tmp.1677709.53db87aa43d6  make_publication_figures.py  mk_bench.py  prebuild_quanto_cuda.py  prep_fp8.py  prepare_bfcl_external.py  pull_job.sh  remote_worker.sh  run_atlas_fold_w4.py  run_attn_baselines.py  run_bfcl_external.py  run_bridge.sh  run_d4_latency.py  (+37 more)
(+541 files in other folders)
