[project]
name = "priority-kv"
version = "0.1.0"
description = "PriorityKV-Agent: structure-protected mixed-precision KV cache for long agent traces"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Arush Sharma" },
    { name = "Anupam Rawat" },
]
requires-python = ">=3.11,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.9",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Install on H200 GPU nodes only: uv sync --extra gpu
gpu = [
    "torch>=2.5.0",
    "transformers>=4.51.0",
    "accelerate>=1.0",
    "datasets>=3.0",
    "huggingface-hub>=0.26",
    "vllm>=0.8.0",
    "optimum-quanto>=0.2.0",
]
# SnapKV / presses — optional, W2–W3: uv sync --extra gpu --extra kvpress
kvpress = [
    "kvpress>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/Arush777/Priority_KV"
Repository = "https://github.com/Arush777/Priority_KV"
Documentation = "https://github.com/Arush777/Priority_KV/blob/main/RESULTS.md"
Issues = "https://github.com/Arush777/Priority_KV/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prioritybench", "src/prioritykv"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "scripts"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Executable experiment scripts establish paths/devices before importing the package.
"scripts/*.py" = ["E402"]
# A small number of tests conditionally skip before importing optional GPU modules.
"tests/*.py" = ["E402"]
